[gd_scene load_steps=4 format=3 uid="uid://bvqudd0jiv2f3"]

[ext_resource type="Script" path="res://Views/TitleView.gd" id="1_y1v53"]
[ext_resource type="Texture2D" uid="uid://b1dqq6puro4yu" path="res://Graphics/ScrapyardArena.png" id="2_k1c8a"]
[ext_resource type="AudioStream" uid="uid://c5jeivx3vbxii" path="res://Sounds/WE_CANT_GET_ALONG_NOW.wav" id="3_5neu5"]

[node name="TitleuView" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1v53")

[node name="ScrapyardArena" type="Sprite2D" parent="."]
position = Vector2(645, 365)
texture = ExtResource("2_k1c8a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Robotic Renewal"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Start" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "START
"

[node name="Quit" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5neu5")
volume_db = -23.0
autoplay = true

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
